package com.stcos.server.entity.form;

import com.stcos.server.util.JSONUtil;
import lombok.Data;
import org.springframework.data.annotation.Id;
import org.springframework.data.mongodb.core.mapping.Document;
import java.util.HashMap;
import java.util.Map;

/**
 * description
 *
 * @author Kekwy
 * @version 1.0
 * @since 2023/5/17 9:57
 */

@Data
@Document(collection = "form")
public abstract class Form {
    @Id
    private Long formId;

    // TODO 酌情设计一些与表单操作有关的共用方法

    // TODO 建立表单名称与表单类的对应关系
    private static final Map<String, Class<?extends Form>> FORM_NAME_CLASS_MAP = new HashMap<>(){{
        put("", null);
    }};


    /**
     * 通过表单名将前端传入的表单 JSON 字符串转换为对应的表单类
     *
     * @param formName 表单名
     * @param formData 表单数据 JSON 字符串
     * @return 如构建失败返回 null，否则返回构建成功地表单对象
     */
    public static Form buildForm(String formName, String formData) {
        Class<? extends Form> formType = FORM_NAME_CLASS_MAP.get(formName);
        if (formType == null) return null;
        return JSONUtil.parseObject(formData, formType);
    }

}
